2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Fix loading of XS module.

	* tp/Texinfo/Conver/Paragraph.pm: Use 0 as the XS interface 
	version number instead of 1.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Reorganize parsetexi header files.

	* tp/Texinfo/XS/parsetexi/tree_types.h,
	* tp/Texinfo/XS/parsetexi/parser.h (GLOBAL_INFO): Move to 
	parser.h.
	* tp/Texinfo/XS/parsetexi/extra.c (add_extra_index_entry): 
	Comment out function with preprocessor.
	* tp/Texinfo/XS/parsetexi/indices.c (enter_index_entry): Don't 
	call add_extra_index_entry.
	* tp/Texinfo/XS/parsetexi/tree_types.h,
	* tp/Texinfo/XS/parsetexi/indices.c (INDEX_ENTRY_REF):
	Move to indices.c.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Avoid a warning.

	* tp/Texinfo/XS/configure.ac: Get perl conf value 'optimize'.
	* tp/Texinfo/XS/Makefile.am (AM_CFLAGS): Add it.  This can avoid 
	a preprocessor warning about -DFORTIFY_SOURCE.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove ununused output variable.

	* tp/Texinfo/XS/configure.ac (XSPARAGRAPH_INTERFACE_VERSION):
	Do not set with AC_SUBST.  This was intended to be used when 
	building XSParagraph as a stand-alone module.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Use an m4 loop.

	* tp/Texinfo/XS/configure.ac (lookup_perl_conf_values): New 
	macro, to use m4_foreach (from autoconf m4sugar) to look up 
	several values with lookup_perl_conf.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Do not require xsubpp.

	* tp/Texinfo/XS/configure.ac: Check for xsubpp with 
	AM_MISSING_PROG instead of AC_PATH_PROG, as xsubpp is not 
	required unless a *.xs file is modified.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove unused type.

	* tp/Texinfo/XS/parsetexi/tree_types.h (DEF_ARGS_EXTRA): Remove.
	(Suggestion from Hans-Bernhard Bröker.)
	(INDEX_ENTRY_REF): Update comment.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Centralise parser configuration values.
